--- a/calculator.html
+++ b/calculator.html
@@ -33,8 +33,8 @@
 
 <body>
 
-     <!-- Navigation -->
-    <nav class="navbar navbar-fixed-top" role="navigation">
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -44,16 +44,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CLICK MEEEEEE!</a>
+                <a class="navbar-brand" href="index.html">EDSS</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="goal.html">About</a>
                     </li>
                     <li>
-                        <a href="services.html">How to use</a>
+                        <a href="calculator.html">Calculator</a>
                     </li>
                    
                    
@@ -61,7 +61,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="faq.html">FAQ</a>
+                                <a href="faq.html">Resources</a>
+                            </li>
+                            <li>
+                                <a href="summary.html">Summary</a>
                             </li>
                         </ul>
                     </li>
