--- a/summary.html
+++ b/summary.html
@@ -79,8 +79,7 @@
 <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Summary
-                    <small>don't know what to put here.</small>
+                <h1 class="page-header">Enviremental Decision Support System for Floating Treatment Wetlands
                 </h1>
                 
             </div>
@@ -93,7 +92,7 @@
                 <img class="img-responsive" src="http://nebula.wsimg.com/6c714b6e55062eb761c994522d9f4765?AccessKeyId=FA62375E0CD6F7BE6EEB&disposition=0&alloworigin=1" alt="">
             </div>
             <div class="col-md-6">
-                <h2>Summary of EDSS</h2>
+                <h2>Summary</h2>
                 <p>Floating Treatment Wetlands have the potential to solve many issues: mitigating contaminant pollution of various types, increase bank/shoreline stabilization through wave power absorption, create floating docks to provide wildlife and people with a healthy ecosystem that is productive, stormwater/wastewater remediation, wastewater treatment, and so on. Because of these reasons we believe that the public deserves an easy way to access the information about the various applications of Floating Treatment Wetland technology and the impact it can have on the environment that surrounds us. In order to achieve this goal, we propose to create an integrated virtual “middle-man” between the Floating Treatment Wetland contractors and distributors, and the public; whether that be large environmental consultant agencies or average citizens with a pond that has too many algae blooms to be a successful ecosystem. That is why there are two basic components of our proposed system: a free easy to use informative website, and a more integrated system focused on action involving Floating Treatment Wetland contractors that is for profit. </p>
                
             </div>
@@ -106,7 +105,7 @@
                 <img class="img-responsive" src="images/dynamicmodel.png" alt="">
             </div>
             <div class="col-md-6">
-                <h2>Environmental Decision Support System Dynamic Model</h2>
+                <h2>Dynamic Model</h2>
                 <p>In order to assist the on site investigator in determining how to set up a stable water purification system, and process, a dynamic model will be used to better understand the relationships between the FTWs, phosphorous removal, periphyton growth, etc. This model will not be accessed during the free portion of the website (getting a rough assessment of the water body and showing options for FTW installation) rather it would be a tool used by site investigators in determining how to set up a better system to optimize phosphorous removal to the goal set by the client in the timeframe dictated by the client. Below you can see the skeleton of the initial factors considered in the phosphorous removal system using FTWs.</p>
             </div>
         </div>
