--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>This is the title sup guys</title>
+    <title>BioRemedy Analytics</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">EDSS</a>
+                <a class="navbar-brand" href="index.html">BioRemedy Analytics</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -88,9 +88,9 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('images/Lake Restoration Image.png');"></div>
+                <div class="fill" style="background-image:url('images/FTW Slide 1.png');"></div>
                 <div class="carousel-caption">
-                    <h2>Slide 1 - Example FTW</h2>
+                    <h2><a href="summary.html" style="color:white;">What is a floating treatment wetland?</a></h2>
                 </div>
             </div>
             <div class="item">
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('images/FTW Slide 1.png');"></div>
+                <div class="fill" style="background-image:url('images/Lake Restoration Image.png');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
@@ -123,16 +123,16 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to Whats it who knows
+                   Welcome to BioRemedy Analytics
                 </h1>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Summary</h4>
+                        <h4>Summary</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Click link for Summary and dynamic model</p>
+                        <p>Take a look at our Project summary and Floating treatment wetland model</p>
                         <a href="summary.html" class="btn btn-default">View summary</a>
                     </div>
                 </div>
@@ -140,10 +140,10 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Applications &amp; Resources</h4>
+                        <h4> Applications &amp; Resources</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Click to view applications and resources</p>
+                        <p>Learn about our floating treatment knowledge banks</p>
                         <a href="faq.html" class="btn btn-default">View applications &amp; resources</a>
                     </div>
                 </div>
@@ -151,10 +151,10 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Calculator</h4>
+                        <h4>Enviremental Decision Support System</h4>
                     </div>
                     <div class="panel-body">
-                        <p>EDSS Calculator</p>
+                        <p>Use our EDSS calculator</p>
                         <a href="http://google.com" class="btn btn-default">Get Calculating</a>
                     </div>
                 </div>
