css and page edits
css and page edits.

--- a/applications.html
+++ b/applications.html
@@ -100,7 +100,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-6">
-                    <img class="img-responsive img-hover img-rounded" src="images/Water_Quality_Remediation_Image.png" alt="">
+                    <img class="img-responsive img-rounded" src="images/Water_Quality_Remediation_Image.png" alt="">
                 </a>
             </div>
             <div class="col-md-6">
@@ -133,7 +133,7 @@
                 </ul>
             </div>
             <div class="col-md-6">
-                    <img class="img-responsive img-hover img-rounded" src="images/Habitat_Management_Image.png" alt="">
+                    <img class="img-responsive img-rounded" src="images/Habitat_Management_Image.png" alt="">
                 </a>
             </div>
             
@@ -145,7 +145,7 @@
         <!-- Project Three -->
         <div class="row">
             <div class="col-md-6">
-                    <img class="img-responsive img-hover img-rounded" src="images/Wetland_Restoration_Image.png" alt="">
+                    <img class="img-responsive img-rounded" src="images/Wetland_Restoration_Image.png" alt="">
                 </a>
             </div>
             <div class="col-md-6">
@@ -172,7 +172,7 @@ Floating treatment wetlands are a great way to balance and revitalize an aquatic
                 </ul>
             </div>
             <div class="col-md-6">
-                    <img class="img-responsive img-hover img-rounded" src="images/Lake Restoration Image.png" alt="">
+                    <img class="img-responsive img-rounded" src="images/Lake Restoration Image.png" alt="">
                 </a>
             </div>
             
@@ -183,7 +183,7 @@ Floating treatment wetlands are a great way to balance and revitalize an aquatic
         <!-- Project Five -->
         <div class="row">
             <div class="col-md-6">
-                    <img class="img-responsive img-hover img-rounded" src="images/Beautification_Image.png" alt="">
+                    <img class="img-responsive img-rounded" src="images/Beautification_Image.png" alt="">
                 </a>
             </div>
             <div class="col-md-6">
@@ -201,7 +201,7 @@ Floating treatment wetlands have the potential to turn into gorgeous floating is
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Need Company Name 2017</p>
+                    <p> BioRemedy Analytics 2017</p>
                 </div>
             </div>
         </footer>
