--- a/faq.html
+++ b/faq.html
@@ -82,7 +82,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Resources
-                    <small>!--Description here?</small>
+                    <small>Information and research relating to floating treatment wetlands and their use</small>
                 </h1>
                 
             </div>
@@ -110,82 +110,7 @@
                         </div>
                     </div>
                     <!-- /.panel -->
-                    <h4 class="page-header">Applications of FTW's</h4>
-                   <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Water Quality</a>
-                            </h4>
-                        </div>
-                        <div id="collapseEight" class="panel-collapse collapse">
-                            <div class="panel-body">
-                               <ul>
-                                   <li>FTWs reduce suspended solids by adsorbing floating sediment in the water column to the biofilm that grows on the island. Freshwater sponge is known to grow on these islands once the quality of the water is enhanced.</li>
-                                   <li>FTWs revitalize the food web by opening up autotrophic and heterotrophic gateways for nutrients to be absorbed from the water and transformed into plant/animal biomass. This allows nutrients to flow through the ecosystem quicker reducing nutrient buildup and increasing the efficiency of the overall natural aquatic system.</li>
-                                   <li>FTWs ….</li>
-                               </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.panel -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">Habitat Management</a>
-                            </h4>
-                        </div>
-                        <div id="collapseNine" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                 <ul>
-                                   <li>If utilized properly FTWs have the ability to support an abundance of life, from avian to aquatic. FTWs provide a floating surface that can thrive in any aquatic habitat, and has been used to bring birds and fish back to an area where they have dissipated.</li>
-                                   <li>FTWs are theorized to balance water temperatures;  absorbing sunlight during the day and being a heat source during the night.</li>
-                                   <li>FTWs are also a beautiful way to monitor wildlife; whether as a dock, or floating camera stand.</li>
-                               </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNinea">Wetland/Lake Restoration</a>
-                            </h4>
-                        </div>
-                        <div id="collapseNinea" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <ul>
-                                   <li>FTWs are a great way to balance and revitalize an aquatic ecosystem by optimizing an environment for a base level food source to grow rapidly. This can allow for proper food web growth and boosts an ecosystems efficiency for transforming energy and nutrients. </li>
-                               </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNineb">Wave Breakers</a>
-                            </h4>
-                        </div>
-                        <div id="collapseNineb" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                 <ul>
-                                   <li>FTWs adsorb wave energy, which could otherwise destabilize banks on coastal shorelines or freshwater lakes. If you add plants to the FTWs, or just allow plants to grow naturally on the island, the root systems should engulf the shoreline and support it, further reducing erosion.</li>
-                               </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNinec">Structure Lifestyle and Beautification</a>
-                            </h4>
-                        </div>
-                        <div id="collapseNinec" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <ul>
-                                   <li>FTWs have the potential to turn into gorgeous floating islands providing a beautiful and functional habitat.</li>
-                               </ul>
-                            </div>
-                        </div>
-                    </div>
+                   
                     <h4 class="page-header">Glossary of Terms</h4>
                      <div class="panel panel-default">
                         <div class="panel-heading">
@@ -325,14 +250,29 @@
             <!-- /.col-lg-12 -->
         </div>
         <!-- /.row -->
-
+ <h4 class="page-header">Case Studies</h4>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNinei">Case example</a>
+                            </h4>
+                        </div>
+                        <div id="collapseNinei" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                   <li>http://www.waterboards.ca.gov/waterrights/water_issues/programs/bay_delta/deltaflow/docs/exhibits/sfwc/spprt_docs/sfwc_exh3_reddy.pdf</li>
+                               </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.panel -->
         <hr>
 
         <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Need Company Name 2017</p>
+                    <p> BioRemedy Analytics 2017</p>
                 </div>
             </div>
         </footer>
