--- a/calculator.html
+++ b/calculator.html
@@ -425,7 +425,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Need Company Name 2017</p>
+                    <p> BioRemedy Analytics 2017</p>
                 </div>
             </div>
         </footer>
