--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <h4>Summary</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Take a look at our Project summary and Floating treatment wetland model</p>
+                        <p>Take a look at our project summary and floating treatment wetland model</p>
                         <a href="summary.html" class="btn btn-default">View summary</a>
                     </div>
                 </div>
@@ -144,7 +144,8 @@
                     </div>
                     <div class="panel-body">
                         <p>Learn about our floating treatment knowledge banks</p>
-                        <a href="faq.html" class="btn btn-default">View applications &amp; resources</a>
+                        <a href="applications.html" class="btn btn-default">View applications</a>
+                        <a href="faq.html" class="btn btn-default">View resources</a>
                     </div>
                 </div>
             </div>
@@ -173,7 +174,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Need Company Name 2017</p>
+                    <p> BioRemedy Analytics 2017</p>
                 </div>
             </div>
         </footer>
