--- a/summary.html
+++ b/summary.html
@@ -98,11 +98,12 @@
             </div>
         </div>
         <!-- /.row -->
-
+</br>
+</br>
          <!-- Dynamic model description -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="images/dynamicmodel.png" alt="">
+                <img class="img-responsive" src="images/dynamicmodel.png" alt="" style="margin-top:25px;">
             </div>
             <div class="col-md-6">
                 <h2>Dynamic Model</h2>
@@ -121,7 +122,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Need Company Name 2017</p>
+                    <p> BioRemedy Analytics 2017</p>
                 </div>
             </div>
         </footer>
