--- a/applications.html
+++ b/applications.html
@@ -98,7 +98,7 @@
 
 
         <!-- Project One -->
-        <div class="row">
+        <div class="row application">
             <div class="col-md-6">
                     <img class="img-responsive img-rounded" src="images/Water_Quality_Remediation_Image.png" alt="">
                 </a>
@@ -120,7 +120,7 @@
         
 
         <!-- Project Two -->
-        <div class="row">
+        <div class="row application">
             <div class="col-md-6">
                 <h3>Habitat Management</h3>
                 <ul>
@@ -143,7 +143,7 @@
         <!--<hr>-->
 
         <!-- Project Three -->
-        <div class="row">
+        <div class="row application">
             <div class="col-md-6">
                     <img class="img-responsive img-rounded" src="images/Wetland_Restoration_Image.png" alt="">
                 </a>
@@ -162,7 +162,7 @@ Floating treatment wetlands are a great way to balance and revitalize an aquatic
 
 
         <!-- Project Four -->
-        <div class="row">
+        <div class="row application">
             <div class="col-md-6">
                 <h3>Wetland/Lake Restoration</h3>
                 <ul>
@@ -181,7 +181,7 @@ Floating treatment wetlands are a great way to balance and revitalize an aquatic
 
 
         <!-- Project Five -->
-        <div class="row">
+        <div class="row application">
             <div class="col-md-6">
                     <img class="img-responsive img-rounded" src="images/Beautification_Image.png" alt="">
                 </a>
