border css and calculator link
boder updates for page and calculator button now links to the calculator.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Use our EDSS calculator to implement a personalized floating treatment wetland.</p>
-                        <a href="http://google.com" class="btn btn-default">Get Calculating</a>
+                        <a href="calculator.html" class="btn btn-default">Get Calculating</a>
                     </div>
                 </div>
             </div>
