joel picture and reference
Joel Picture and reference

--- a/goal.html
+++ b/goal.html
@@ -125,7 +125,7 @@
             </div>
             <div class="col-md-4 text-center">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="images/people/joel.jpg" alt="">
+                    <img class="img-responsive" src="images/people/joel.JPG" alt="">
                     <div class="caption">
                         <h3>Joel Kaminski<br>
                             <small>Floating Treatment Wetland Specalist</small>
