--- a/calculator.html
+++ b/calculator.html
@@ -82,7 +82,7 @@
         <!-- Image Header -->
         <div class="row">
             <div class="col-lg-12">
-                <div class="well" id="calcresults" style="display:none; font-weight:bold;">
+                <div class="well" id="calcresults" style="display:none; font-weight:bold; overflow:auto;">
                 <h2 id="resultstitle" style="font-weight:bold;"></h4>
                 <h4 id="resultsphone"></h4>
                 <h4 id="resultsemail"></h4>
@@ -109,20 +109,59 @@
         <td id="step1input3">July</td>
         <td id="step1response3">Dooley</td>
       </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-      </tr>
     </tbody>
   </table>
 </div>
 
 
-                <div id="step2results"> Step 2:</div>
-                <div id="step2footnote"></div>
+               <div class="container">
+  <h2>Step 2 Results-Proximity Factors</h2>           
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Input</th>
+        <th>Output</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td id="step2input1">John</td>
+        <td id="step2response1">Doe</td>
+      </tr>
+      <tr>
+        <td id="step2input2">Mary</td>
+        <td id="step2response2">Moe</td>
+      </tr>
+      <tr>
+        <td id="step2input3">July</td>
+        <td id="step2response3">Dooley</td>
+      </tr>
+      <tr>
+        <td id="step2input4">July</td>
+        <td id="step2response4">Dooley</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-                <div id="step3results"> Step 3:</div>
-                <div id="step3footnote"></div>
+<div class="container">
+  <h2>Step 3 Results-Desired Application</h2>           
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Input</th>
+        <th>Output</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td id="step3input1">John</td>
+        <td id="step3response1">Doe</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+               
 
                 <div id="step4results"> Step 4:</div>
                 <div id="step4footnote"></div>
