spell fixes  step3 functionality fix
fixes

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
             <div class="item">
                 <div class="fill" style="background-image:url('images/FTW Slide 2.png');"></div>
                 <div class="carousel-caption">
-                    <h2>Slide 2 -</h2>
+                    
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('images/Lake Restoration Image.png');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4>Enviremental Decision Support System</h4>
+                        <h4>Environmental Decision Support System</h4>
                     </div>
                     <div class="panel-body">
                         <p>Use our EDSS calculator to implement a personalized floating treatment wetland.</p>
