--- a/summary.html
+++ b/summary.html
@@ -79,7 +79,7 @@
 <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Enviremental Decision Support System for Floating Treatment Wetlands
+                <h1 class="page-header">Environmental Decision Support System for Floating Treatment Wetlands
                 </h1>
                 
             </div>
