Updates applications and resources
Updates.

--- a/applications.html
+++ b/applications.html
@@ -197,6 +197,41 @@ Floating treatment wetlands have the potential to turn into gorgeous floating is
         </div>
         <!-- /.row -->
 
+         <!-- Project Four -->
+        <div class="row application">
+            <div class="col-md-6">
+                <h3>Species Control</h3>
+                <ul>
+                    <li>
+Floating treatment wetlands can be used to control pesky insects such as mosquitos by growing fathead minnows from the biofilm that grows on floating treatment wetlands. Fathead minnows consume roughly 500-700 mosquito larvae a day. 
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                    <img class="img-responsive img-rounded" src="images/species_control_applications.jpg" alt="">
+                </a>
+            </div>
+            
+        </div>
+        <!-- /.row -->
+
+         <!-- Project Five -->
+        <div class="row application">
+            <div class="col-md-6">
+                    <img class="img-responsive img-rounded" src="images/Odor_reduction_application.PNG" alt="">
+                </a>
+            </div>
+            <div class="col-md-6">
+                <h3>Aquatic Odor Reducer</h3>
+                <ul>
+                    <li>
+As the biofilm grows throughout the floating treatment wetlands it will create a source of nutrients for small aquatic critters (such as minnows) to feed on. This provides an effective way for decomposing organic material to be used, instead of it building up to create an ammonia rich environment that causes ponds to become smelly. 
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /.row -->
+
        <!-- Footer -->
         <footer>
             <div class="row">
