--- a/calculator.html
+++ b/calculator.html
@@ -570,7 +570,7 @@
     <div class="form-group row">
       <div class="col-xs-1">
         <label for="step5area">Area:</label>
-        <input class="form-control" id="step5area" type="text">
+        <input class="form-control" id="step5area" type="text"><span>ft<sup>2</sup></span>
       </div>
     </div>
   </form>
@@ -601,7 +601,7 @@
     <div class="form-group row">
       <div class="col-xs-1">
         <label for="step5depth">Depth:</label>
-        <input class="form-control" id="step5depth" type="text">
+        <input class="form-control" id="step5depth" type="text"><span>ft</span>
       </div>
     </div>
   </form>
@@ -615,7 +615,7 @@
     <div class="form-group row">
       <div class="col-xs-1">
         <label for="step5sarea">Surface Area:</label>
-        <input class="form-control" id="step5sarea" type="text">
+        <input class="form-control" id="step5sarea" type="text"><span>%</span>
       </div>
     </div>
   </form>
