--- a/faq.html
+++ b/faq.html
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="panel-group" id="accordion">
-                    <div class="panel panel-default">
+                    <!--<div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Companies</a>
@@ -108,10 +108,10 @@
                                </ul>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <!-- /.panel -->
                    
-                    <h4 class="page-header">Glossary of Terms</h4>
+                    <h4 class="page-header">References</h4>
                      <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -250,7 +250,7 @@
             <!-- /.col-lg-12 -->
         </div>
         <!-- /.row -->
- <h4 class="page-header">Case Studies</h4>
+ <!--<h4 class="page-header">Case Studies</h4>
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -264,7 +264,7 @@
                                </ul>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <!-- /.panel -->
         <hr>
 
