Added pictures to questions and fix text
small fixes.

--- a/calculator.html
+++ b/calculator.html
@@ -282,6 +282,7 @@
       <label><input type="radio" name="radiostep1" value="Excessive">Excessive <i>(>90% of banks covered in vegetation)</i></label>
     </div>
   </form>
+  <img src="images/Riparian_Buffer.png"/>
 </div>
 
 <div class="container page-header">
@@ -300,6 +301,7 @@
       <label><input type="radio" name="radio2step1" value="Excessive">Excessive <i>(>90% of banks covered in vegetation)</i></label>
     </div>
   </form>
+  <img src="images/Algae_Bloom.png"/>
 </div>
 
 <div class="container page-header">
