--- a/faq.html
+++ b/faq.html
@@ -244,6 +244,38 @@
                         </div>
                     </div>
                     <!-- /.panel -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNinem">Effects of Vegetation, Season and Temperature on the Removal of Pollutants in Experimental Floating Treatment Wetlands</a>
+                            </h4>
+                        </div>
+                        <div id="collapseNinem" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                   <li>http://link.springer.com/article/10.1007/s11270-010-0342-z
+</li>
+                               </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNinem">Evaluation of floating treatment wetlands as retrofits to existing stormwater retention ponds</a>
+                            </h4>
+                        </div>
+                        <div id="collapseNinem" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                   <li>http://www.sciencedirect.com/science/article/pii/S0925857413000384
+
+</li>
+                               </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.panel -->
                 </div>
                 <!-- /.panel-group -->
             </div>
