--- a/calculator.html
+++ b/calculator.html
@@ -571,8 +571,8 @@
   <form>
     <div class="form-group row">
       <div class="col-xs-1">
-        <label for="step5area">Area:</label>
-        <input class="form-control" id="step5area" type="text"><span>ft<sup>2</sup></span>
+        <label for="step5area">Area(ft<sup>2</sup>):</label>
+        <input class="form-control" id="step5area" type="text">
       </div>
     </div>
   </form>
@@ -602,8 +602,8 @@
   <form>
     <div class="form-group row">
       <div class="col-xs-1">
-        <label for="step5depth">Depth:</label>
-        <input class="form-control" id="step5depth" type="text"><span>ft</span>
+        <label for="step5depth">Depth(ft):</label>
+        <input class="form-control" id="step5depth" type="text">
       </div>
     </div>
   </form>
@@ -616,8 +616,8 @@
   <form>
     <div class="form-group row">
       <div class="col-xs-1">
-        <label for="step5sarea">Surface Area:</label>
-        <input class="form-control" id="step5sarea" type="text"><span>%</span>
+        <label for="step5sarea">Surface Area(%):</label>
+        <input class="form-control" id="step5sarea" type="text">
       </div>
     </div>
   </form>
